Bug 1653576 - Don't let dmanip events roll up popups if the events are inside the popup. r=tnikkel

The existing rollup-handling code in SendAnAPZEvent was mostly copied from
the DealWithPopups function, so this patch removes that duplication and reuses
the existing codepath. And it adds some extra checking for dmanip events that
mirrors the checking we do for other events, so that events that are targeted
inside the popup don't cause the popup to get rolled up.

Differential Revision: https://phabricator.services.mozilla.com/D86603